Punctuation and spelling, referencing

--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/00_Beschreibung/main.tex
@@ -1,2 +1,2 @@
-Mutations sind Anfragen an den Server, einen Datensatz zu verändern.
-Folgende Mutations sind für das Admin-Panel nötig:
+Mutationen sind Anfragen an den Server, einen Datensatz zu verändern.
+Folgende Mutationen sind für das Admin-Panel nötig:
