--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/01_acceptAliasSuggestion/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/01_acceptAliasSuggestion/main.tex
@@ -1,13 +1,13 @@
-\paragraph{\texttt{+ acceptAliasSuggestion(alias: Alias) : boolean}}\label{AP_Backend_acceptAliasSuggestion}%$$$M
+\paragraph{\texttt{+ acceptAliasSuggestion(alias: Alias) : Boolean}}\label{AP_Backend_acceptAliasSuggestion}%$$$M
 \paragraph*{Kurzbeschreibung}
 Akzeptiere den gegebenen Alias-Vorschlag.
 \paragraph*{Beschreibung}
 Diese Methode sendet dem Server die Nachricht, den gegebenen Alias-Vorschlag zu akzeptieren.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item alias: Alias = Der zu akzeptierende Alias-Vorschlag.
+    \item alias: \hyperref[AP_Alias]{Alias} = Der zu akzeptierende Alias-Vorschlag.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls erfolgreich akzeptiert, falsch sonst.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
