--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/03_blacklistAliasSuggestion/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/03_blacklistAliasSuggestion/main.tex
@@ -1,13 +1,13 @@
-\paragraph{\texttt{+ blacklistAliasSuggestion(alias: Alias) : boolean}}\label{AP_Backend_blacklistAliasSuggestion}%$$$M
+\paragraph{\texttt{+ blacklistAliasSuggestion(alias: Alias) : Boolean}}\label{AP_Backend_blacklistAliasSuggestion}%$$$M
 \paragraph*{Kurzbeschreibung}
 Setze den gegebenen Alias-Vorschlag auf die Blacklist.
 \paragraph*{Beschreibung}
 Diese Methode sendet dem Server die Nachricht, den gegebenen Alias-Vorschlag auf die Blacklist zu setzen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item alias: Alias = Der auf die Blacklist zu setzende Alias-Vorschlag.
+    \item alias: \hyperref[AP_Alias]{Alias} = Der auf die Blacklist zu setzende Alias-Vorschlag.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls erfolgreich auf die Blacklist gesetzt, falsch sonst.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
