--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/04_deleteOfficialAlias/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/04_deleteOfficialAlias/main.tex
@@ -1,13 +1,13 @@
-\paragraph{\texttt{+ deleteOfficialAlias(alias: Alias) : boolean}}\label{AP_Backend_deleteOfficialAlias}%$$$M
+\paragraph{\texttt{+ deleteOfficialAlias(alias: Alias) : Boolean}}\label{AP_Backend_deleteOfficialAlias}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entferne den gegebenen Alias aus den offiziellen Aliassen.
 \paragraph*{Beschreibung}
 Diese Methode sendet dem Server die Nachricht, den gegebenen Alias aus den offiziellen Aliassen zu entfernen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item alias: Alias = Der zu entfernende Alias.
+    \item alias: \hyperref[AP_Alias]{Alias} = Der zu entfernende Alias.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls erfolgreich entfernt, falsch sonst.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
