--- a/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/02_getRoomNumber/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/02_getRoomNumber/main.tex
@@ -3,8 +3,8 @@
 Getter für die Raumnummer.
 \paragraph*{Beschreibung}
 Getter für die Raumnummer.
-Falls dieser Alias zu keinem Raum gehört wird \verb#null# zurückgegeben
+Falls dieser Alias zu keinem Raum gehört wird \verb#null# zurückgegeben.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Raumnummer als String oder null
+Raumnummer als String oder null.
