--- a/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/04_getMapID/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/04_getMapID/main.tex
@@ -2,6 +2,6 @@
 \paragraph*{Beschreibung}
 Getter für den Kartenobjektidentifizierer.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-int, Kartenobjektidentifizierer
+int, Kartenobjektidentifizierer.
