--- a/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/05_constructor/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/05_constructor/main.tex
@@ -3,10 +3,10 @@
 Erzeuge eine Instanz der Klasse \verb#Alias#
 \paragraph*{Parameter}
 \begin{itemize}
-    \item buildingNumber : String = Zugehörige Gebäudenummer des Aliases
-    \item roomNumber : String = Zugehörige Raumnummer des Aliases, kann \verb#null# sein
-    \item name : String = Bezeichner des Aliases
-    \item mapID : int = Kartenobjektidentifizierer des Aliases
+    \item buildingNumber: String = Zugehörige Gebäudenummer des Aliases.
+    \item roomNumber: String = Zugehörige Raumnummer des Aliases, kann \verb#null# sein.
+    \item name: String = Bezeichner des Aliases.
+    \item mapID: int = Kartenobjektidentifizierer des Aliases.
 \end{itemize}
 \paragraph*{Rückgabewert}
-void
+Void.
