--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/05_deleteBlacklistEntry/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/05_deleteBlacklistEntry/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+ deleteBlacklistEntry(entry: String) : boolean}}\label{AP_Backend_deleteBlacklistEntry}%$$$M
+\paragraph{\texttt{+ deleteBlacklistEntry(entry: String) : Boolean}}\label{AP_Backend_deleteBlacklistEntry}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entferne den gegeben Eintrag von der Blacklist.
 \paragraph*{Beschreibung}
@@ -8,6 +8,6 @@ Diese Methode sendet dem Server die Nachricht, den gegebenen Eintrag von der Bla
     \item entry: String = Der zu entfernende Blacklisteintrag.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, falls erfolgreich entfernt, falsch sonst
+Wahr, falls erfolgreich entfernt, falsch sonst.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
