Punctuation, styling, referencing, count methods

--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/01_getBlacklist/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/01_getBlacklist/main.tex
@@ -2,10 +2,10 @@
 \paragraph*{Kurzbeschreibung}
 Getter für die Blacklist.
 \paragraph*{Beschreibung}
-Diese Methode fragt die aktuelle Blacklist vom Backend ab und gibt sie zurück.
+Diese Methode fragt die aktuelle Blacklist vom \hyperref[AP_Backend]{Backend} ab und gibt sie zurück.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Iterable<String>
+Iterable$<$String$>$.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
