--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/02_getOfficialAlias/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/02_getOfficialAlias/main.tex
@@ -2,10 +2,10 @@
 \paragraph*{Kurzbeschreibung}
 Getter für die offiziellen Aliasse.
 \paragraph*{Beschreibung}
-Diese Methode fragt die aktuellen offiziellen Aliasse vom Backend ab und gibt sie zurück.
+Diese Methode fragt die aktuellen offiziellen Aliasse vom \hyperref[AP_Backend]{Backend} ab und gibt sie zurück.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Iterable<Alias>
+Iterable$<$\hyperref[AP_Alias]{Alias}$>$.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
