--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/03_getAliasSuggestions/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/03_getAliasSuggestions/main.tex
@@ -2,7 +2,7 @@
 \paragraph*{Kurzbeschreibung}
 Getter für die Alias-Vorschläge mit einer Mindestanzahl an positiven und negativen Bewertungen.
 \paragraph*{Beschreibung}
-Diese Methode fragt die aktuellen Alias-Vorschläge vom Backend ab und gibt sie zurück.
+Diese Methode fragt die aktuellen Alias-Vorschläge vom \hyperref[AP_Backend]{Backend} ab und gibt sie zurück.
 Dabei müssen diese die angegebene Mindestanzahl an positiven und negativen Bewertungen erfüllen.
 \paragraph*{Parameter}
 \begin{itemize}
@@ -10,6 +10,6 @@ Dabei müssen diese die angegebene Mindestanzahl an positiven und negativen Bewe
     \item minNegative: int = Die minimale Anzahl an negativen Bewertungen.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Iterable<Alias>
+Iterable$<$\hyperref[AP_Alias]{Alias}$>$.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
