--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/02_Mutations/05_deleteBlacklistEntry/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/02_Mutations/05_deleteBlacklistEntry/main.tex
@@ -1,13 +1,13 @@
-\paragraph{\texttt{+ deleteBlacklistEntry(entry: String) : boolean}}\label{AP_Framework_deleteBlacklistEntry}%$$$M
+\paragraph{\texttt{+ deleteBlacklistEntry(entry: String) : Boolean}}\label{AP_Framework_deleteBlacklistEntry}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entferne den gegeben Eintrag von der Blacklist.
 \paragraph*{Beschreibung}
-Diese Methode sendet dem Backend die Nachricht, den gegebenen Eintrag von der Blacklist zu entfernen.
+Diese Methode sendet dem \hyperref[AP_Backend]{Backend} die Nachricht, den gegebenen Eintrag von der Blacklist zu entfernen.
 \paragraph*{Parameter}
 \begin{itemize}
     \item entry: String = Der zu entfernende Blacklisteintrag.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, falls erfolgreich entfernt, falsch sonst
+Wahr, falls erfolgreich entfernt, falsch sonst.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator..
