--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/01_Queries/00_Beschreibung/main.tex
@@ -1,2 +1,2 @@
 Queries sind Anfragen an den Server mit der Absicht Daten zurückzuerhalten.
-Die folgenden Anfragen werden an die Klasse \verb#Backend# weitergegeben:
+Die folgenden Anfragen werden an die Klasse \hyperref[AP_Backend]{Backend} weitergegeben:
