--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/02_Mutations/02_declineAliasSuggestion/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/02_Mutations/02_declineAliasSuggestion/main.tex
@@ -1,13 +1,13 @@
-\paragraph{\texttt{+ declineAliasSuggestion(alias: Alias) : boolean}}\label{AP_Framework_declineAliasSuggestion}%$$$M
+\paragraph{\texttt{+ declineAliasSuggestion(alias: Alias) : Boolean}}\label{AP_Framework_declineAliasSuggestion}%$$$M
 \paragraph*{Kurzbeschreibung}
 Lehne den gegebenen Alias-Vorschlag ab.
 \paragraph*{Beschreibung}
-Diese Methode sendet dem Backend die Nachricht, den gegebenen Alias-Vorschlag abzulehnen.
+Diese Methode sendet dem \hyperref[AP_Backend]{Backend} die Nachricht, den gegebenen Alias-Vorschlag abzulehnen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item alias: Alias = Der abzulehnende Alias-Vorschlag.
+    \item alias: \hyperref[AP_Alias]{Alias} = Der abzulehnende Alias-Vorschlag.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls erfolgreich abgelehnt, falsch sonst.
 \paragraph*{Berechtigungslevel}
-Administrator
+Administrator.
