Punctuation, referencing, spelling

--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/00_Beschreibung/main.tex
@@ -1,1 +1,1 @@
-Die Authentifzierungsmethoden werden an \verb#AuthManager# weiterdelegiert.
+Die Authentifzierungsmethoden werden an \hyperref[AP_AuthManager]{AuthManager} weiterdelegiert.
