--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/06_getUserInfo/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/06_getUserInfo/main.tex
@@ -3,10 +3,10 @@
 Getter für die Informationen des angemeldeten Benutzers.
 \paragraph*{Beschreibung}
 Getter für die Informationen des angemeldeten Benutzers.
-Ist kein ID-Token gesetzt, so wird der Benutzer aufgefordert sich zu authentifizieren, sofern der Framework durch \verb#Framework::configure# konfiguriert wurde.
+Ist kein ID-Token gesetzt, so wird der Benutzer aufgefordert sich zu authentifizieren, sofern der Framework durch \hyperref[AP_Framework_configure]{\texttt{Framework::configure}} konfiguriert wurde.
 Ist der ID-Token invalide, so wird versucht diesen zu erneuern.
-Treten Fehler auf, oder wurde der AuthManager nicht authentifiziert, wird \verb#null# zurückgegeben.
+Treten Fehler auf, oder wurde der \hyperref[AP_Framework]{Framework} nicht konfiguriert, wird \verb#null# zurückgegeben.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-JSON mit den Benutzerinformationen
+JSON mit den Benutzerinformationen.
