--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/03_removeChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/03_removeChange/main.tex
@@ -1,10 +1,10 @@
-\paragraph{\texttt{+ removeChange(metadata: JSON, category: String) : boolean}}\label{AP_Framework_removeChange}%$$$M
+\paragraph{\texttt{+ removeChange(metadata: JSON, category: String) : Boolean}}\label{AP_Framework_removeChange}%$$$M
 \paragraph*{Beschreibung}
 Entferne die entsprechende Änderung.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item metadata: JSON = Metadaten der entsprechenden Änderungen.
+    \item metadata: JSON = Metadaten der entsprechenden Änderung.
     \item category: String = Kategorie der Änderung.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich, falsch sonst
+Wahr, wenn erfolgreich, falsch sonst.
