--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/04_getChanges/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/04_getChanges/main.tex
@@ -3,6 +3,6 @@
 Getter für alle Änderungen.
 Im JSON stehen die Metadaten, die Zeit der Erstellung und die Kategorie.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
-Iterable<JSON>
+Iterable$<$JSON$>$.
