--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/05_getInstance/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/05_getInstance/main.tex
@@ -5,6 +5,6 @@ Gibt die aktuelle \verb#Framework#-Instanz zurück.
 Gibt die aktuelle \verb#Framework#-Instanz zurück.
 Existiert noch keine Instanz, wird eine neue erstellt und diese zurückgegeben.
 \paragraph*{Parameter}
-keine
+keine.
 \paragraph*{Rückgabewert}
-\verb#Framework#-Instanz
+\verb#Framework#-Instanz.
