--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/06_constructor/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/06_constructor/main.tex
@@ -5,6 +5,6 @@ Erzeuge eine Framework-Instanz.
 Erzeuge eine Framework-Instanz.
 Diese Methode wird nur durch die \verb#Framework::getInstance# Methode aufgerufen.
 \paragraph*{Parameter}
-Keine
+Keine.
 \paragraph*{Rückgabewert}
 Void.
