added Schnittstelle and Methods to register User

--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/Beschreibung/main.tex
@@ -6,7 +6,7 @@ seines Namens und der zugehörigen MapID sowie das Löschen und Speichern von Al
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item \texttt{findByMapID(mapID : int) : Iterable<alias : String>}
-    \item \texttt{deleteByNameAndMapID(alias : String, mapID : int) : Boolean}
+    \item \texttt{deleteByNameAndMapID(aliasSuggestion : String, mapID : int) : Boolean}
     \item \texttt{deleteByName(aliasSuggestion : String) : Boolean}
     \item \texttt{findByVotes(minVotesNeg : int, minVotesPos : int) : Iterable<AliasSuggestion>}
     \item \texttt{findAmountByMapID(mapID : int, amount : int) : Iterable<aliasSuggestion : String>}
