--- a/Kapitel/00_Backend/Services/AliasServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/main.tex
@@ -6,3 +6,4 @@
 \inprelmod{getAlias_int,UserID_ListAlias}
 \inprelmod{getAlias_int_ListAlias}
 \inprelmod{getAliasUpdates_int_ListAlias}
+\inprelmod{doesAliasExist_int,String_boolean}
