Add missing method 'findByIDandName_int,String_AliasSuggestion'
Add missing method
'Kapitel/00_Backend/Repositories/AliasSuggestionRepository/
findByIDandName_int,String_AliasSuggestion' in '/main.tex'
(in the same above mentioned path).

--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
@@ -7,3 +7,4 @@
 \inprelmod{updateVotes_String,int,boolean_boolean}
 \inprelmod{addVoter_String,String,int_boolean}
 \inprelmod{findByMapIDAmount_int,int_IterableAliasSuggestion}
+\inprelmod{findByIDandName_int,String_AliasSuggestion}
