--- a/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/main.tex
@@ -2,5 +2,5 @@
 
 \inprelmod{Beschreibung}
 \inprelmod{getMapObject_int_String}
-\inpremod{getMapObject_int_String}
+\inprelmod{getMapObject_int_String}
 \inprelmod{getAllMapIDs_ListInt}
