Add missing method 'findNewerThanVersion_int_IterableString'
Add missing method
'Kapitel/00_Backend/Repositories/AliasRepository/
findNewerThanVersion_int_IterableString'
in '/main.tex' (in the same above mentioned path).

--- a/Kapitel/00_Backend/Repositories/AliasRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/main.tex
@@ -3,4 +3,5 @@
 \inprelmod{Beschreibung}
 \inprelmod{findByMapID_int_ListAlias}
 \inprelmod{findByName_String_Alias}
+\inprelmod{findNewerThanVersion_int_IterableString}
 \inprelmod{deleteByName_String_boolean}
