Added links App/Navigation

--- a/Kapitel/02_App/02_t_Navigation/01_Screens/main.tex
+++ b/Kapitel/02_App/02_t_Navigation/01_Screens/main.tex
@@ -3,16 +3,16 @@ Die App besitzt die folgenden Ansichten:
 \begin{itemize}
     \item \texttt{Kartenansicht}: Diese Ansicht ist die Hauptansicht der App. Die App zeigt nach dem Starten diese Ansicht an. 
     Diese Ansicht zeigt eine Karte und lässt Interaktionen damit zu.
-    Sie wird von der Klasse \texttt{MapScreen} bereitgestellt.
+    Sie wird von der Klasse \hyperref[App_Map_View_MapScreen]{MapScreen} bereitgestellt.
     \item \texttt{Alias-Hinzufügen-Ansicht}: Diese Ansicht lässt den Benutzer einen Alias hinzufügen oder vorschlagen.
-    Sie wird von der Klasse \texttt{AddAliasScreen} bereitgestellt.
+    Sie wird von der Klasse \hyperref[App_AddAlias_AddAliasScreen]{AddAliasScreen} bereitgestellt.
     \item \texttt{Suche}: Diese Ansicht erlaubt es dem Benutzer nach einem Kartenobjekt zu suchen.
-    Sie wird von der Klasse \texttt{SearchScreen} bereitgestellt.
+    Sie wird von der Klasse \hyperref[App_Search_SearchScreen]{SearchScreen} bereitgestellt.
     \item \texttt{Anmeldung}: Diese Ansicht erlaubt es dem Benutzer sich anzumelden.
-    Sie wird von der Klasse \texttt{SignInScreen} bereitgestellt.
+    Sie wird von der Klasse \hyperref[App_Signup_SignInScreen]{SignInScreen} bereitgestellt.
     \item \texttt{Einstellungen}: Diese Ansicht erlaubt es dem Benutzer die Einstellungen der App festzulegen.
-    Sie wird von der Klasse \texttt{SettingsScreen} bereitgestellt.
+    Sie wird von der Klasse \hyperref[App_Settings_SettingsScreen]{SettingsScreen} bereitgestellt.
     \item \texttt{Dokumentenanzeige}: Diese Ansicht zeigt Textdokumente wie die Datenschutzerklärung an.
-    Sie wird von der Klasse \texttt{DocumentScreen} bereitgestellt.
+    Sie wird von der Klasse \hyperref[App_DocumentViewer_DocumentScreen]{DocumentScreen} bereitgestellt.
 \end{itemize}
 Alle Ansichten sind Composables.
