--- a/Kapitel/02_App/08_DocumentViewer/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/main.tex
@@ -1,4 +1,4 @@
-\section{Dokumentenanzeige}
+\section{Dokumentenanzeige}\label{App_DocumentViewer}
 \paragraph*{Paketname}
 documentviewer
 \paragraph*{Beschreibung}
