--- a/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
@@ -27,3 +27,13 @@ Der SignInScreen ist folgendermaßen aufgebaut:
     War die Anmeldung erfolgreich wird diese Ansicht nach bestätigen der Meldung geschlossen.
 \end{itemize}
 
+\subsubsection*{Bilder}\label{App_Signup_Klassen_SignInScreen_Bilder}
+\begin{minipage}{\linewidth}
+    \centering
+    \begin{minipage}{.49\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{Anmeldung.png}
+        \captionof{figure}{Anmeldung}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
