--- a/Kapitel/02_App/09_DataManagement/main.tex
+++ b/Kapitel/02_App/09_DataManagement/main.tex
@@ -4,5 +4,5 @@ datamanagement
 \paragraph*{Beschreibung}
 Dieses Paket enthält zusätzliche Funktionalität, um die lokale Datenbank zu aktualisieren.
 
-\inprelmod{DataUpdateController}
-\inprelmod{DataUpdater}
+\inprelmod{Klassendiagramm}
+\inprelmod{Klassen}
