--- a/Kapitel/00_Backend/Resolvers/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/Beschreibung/main.tex
@@ -15,3 +15,7 @@ führen und die richtige Rückgabe erzeugt wird.
     		Bietet Schnittstelle zum Abfragen gespeicherter Daten.
 \end{itemize}
 
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{\currfiledir Resolvers}
+\end{figure}
