--- a/Kapitel/00_Backend/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Beschreibung}%$$$M
+\section*{Beschreibung}%$$$M
 
 \paragraph*{Backend}
 Das \dq Backend \dq stellt die Serverseite unserer Applikation dar. Sie ist verantwortlich für die Datenhaltung und muss die benötigten Schnittstellen für Applikation und Admin-Panel zur Verfügung stellen.
