--- a/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
@@ -7,7 +7,7 @@ Mit dieser kann der Benutzer einen neuen Alias lokal hinzufügen oder global vor
 Beim Erstellen eines AddAliasScreens durch die Navigation erhält dieser die MapId 
 des ausgewählten Kartenobjekts, zu dem ein Alias erstellt werden soll (siehe Navigation).\\
 Für die Speicherung der neuen Aliasse bez. Alias-Vorschläge und den Erhalt der Aliasse benutzt 
-der AddAliasScreen einen IAddAliasController.
+der AddAliasScreen einen \hyperref[App_AddAlias_IAddAliasController]{IAddAliasController}.
 
 \paragraph*{Aufbau}
 \begin{itemize}
