--- a/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
@@ -63,4 +63,4 @@ Implementiert \texttt{IAddAliasController}.
 \paragraph*{Beschreibung}
 Der AddAliasController stellt Methoden bereit um einen Alias bez. Alias-Vorschlag hinzuzufügen. 
 Außerdem stellt er existierende Aliasse bereit.\\
-Seine Daten bezieht er von der Model-Klasse IAddAliasDataProvider.
+Seine Daten bezieht er von der Model-Klasse \hyperref[App_AddAlias_IAliasDataProvider]{IAddAliasDataProvider}.
