--- a/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
@@ -49,4 +49,4 @@ Der Aufruf wird an das Model weitergegeben.
 Implementiert \texttt{ISignInController}.
 \paragraph*{Beschreibung}
 Stellt Daten für das Anzeigen der Anmeldung bereit und verarbeitet die Interaktionen.\\
-Besitzt für die Datenbeschaffung und die Ausführung der Anmeldung einen SignInModel.
+Besitzt für die Datenbeschaffung und die Ausführung der Anmeldung einen \hyperref[App_Signup_SignInModel]{SignInModel}.
