--- a/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
@@ -3,7 +3,7 @@
 \texttt{Composable}.
 \paragraph*{Beschreibung}
 Dieses \texttt{Composable} zeigt die Anmeldung an.\\
-Diese Klasse besitzt zum Erhalt der Daten und zur Ausführung der Interaktionen einen ISignInController.
+Diese Klasse besitzt zum Erhalt der Daten und zur Ausführung der Interaktionen einen \hyperref[App_Signup_SignInController]{ISignInController}.
 
 \paragraph*{Aufbau}
 Der SignInScreen ist folgendermaßen aufgebaut:
