--- a/Kapitel/02_App/04_AddAlias/Klassen/AliasDataProvider/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AliasDataProvider/main.tex
@@ -4,7 +4,7 @@ Implementiert \texttt{IAliasDataProvider}.
 \paragraph*{Beschreibung}
 Der AliasDataProvider ist eine Fassade des Models. 
 Dahinter verbirgt er Funktionalität zum Lesen, Modifizieren, Vorschlagen und Löschen von Aliassen.\\
-Diese Klasse besitzt einen LocalAliasManager und einen GlobalAliasManager.
+Diese Klasse besitzt einen \hyperref[App_AddAlias_LocalAliasManager]{LocalAliasManager} und einen \hyperref[App_AddAlias_GlobalAliasManager]{GlobalAliasManager}.
 
 \paragraph*{Methoden, die an den LocalAliasManager delegiert werden}
 \begin{itemize}
